# GuiTestTask

./: .gitignore  CMakeLists.txt  README.md
data/: cell.qss  cellbutton.qss  icons.qrc
src/: cell.cpp  cellbutton.cpp  cellbuttoneventfilter.cpp  celldialog.cpp  clickablelabel.cpp  main.cpp  mainwindow.cpp
src/include/: cell.h  cellbutton.h  cellbuttoneventfilter.h  celldialog.h  clickablelabel.h  mainwindow.h
ui/: cell.ui  celldialog.ui  mainwindow.ui
